--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
             <artifactId>xml-path</artifactId>
             <version>4.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
